# m-explore-ros2

./: .gitignore  LICENSE  README.md
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/workflows/: build_test.yaml
explore/: CHANGELOG.rst  CMakeLists.txt  package.xml
explore/config/: params.yaml  params_costmap.yaml
explore/include/explore/: costmap_client.h  costmap_tools.h  explore.h  frontier_search.h
explore/launch/: explore.launch.py
explore/src/: costmap_client.cpp  explore.cpp  frontier_search.cpp
explore/test/: test_explore.cpp
map_merge/: CMakeLists.txt  package.xml
map_merge/config/: params.yaml
map_merge/include/combine_grids/: grid_compositor.h  grid_warper.h  merging_pipeline.h
map_merge/include/map_merge/: map_merge.h  ros1_names.hpp
map_merge/launch/: from_map_server.launch.py  map_merge.launch.py  map_merge.rviz  multi_tb3_simulation_launch.py
map_merge/launch/tb3_simulation/: bringup_launch.py  multi_tb3_simulation_launch.py  slam_toolbox.py  tb3_simulation_launch.py
map_merge/launch/tb3_simulation/worlds/: world_only.model
map_merge/src/: map_merge.cpp
map_merge/src/combine_grids/: estimation_internal.h  grid_compositor.cpp  grid_warper.cpp  merging_pipeline.cpp
map_merge/test/: download.sh  download_data.sh  test_merging_pipeline.cpp  testing_helpers.h
