<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>multirobot_map_merge</name>
  <version>1.0.0</version>

  <description>Merging multiple maps without knowledge of initial
  positions of robots ROS2 Port.</description>

  <author email="candres.alv@gmail.com">Carlos Alvarez</author>
  <maintainer email="candres.alv@gmail.com">Carlos Alvarez</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <depend>ament_cmake</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>map_msgs</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <!-- used to get OpenCV -->
  <depend>image_geometry</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
